Redundant unit test framework lookup fixed.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 include(CMTest)
 
-cm_find_package(Boost REQUIRED COMPONENTS unit_test_framework)
+if(NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
+    cm_find_package(Boost REQUIRED COMPONENTS unit_test_framework)
+endif()
 
 if(Boost_FOUND AND BUILD_SHARED_LIBS)
     set(Boost_USE_STATIC_LIBS FALSE)
@@ -16,8 +18,7 @@ macro(define_storage_test name)
     cm_test(NAME ${name}_test SOURCES ${name}.cpp)
 
     target_include_directories(${name}_test PRIVATE
-                               "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/public>"
-                               "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/private>"
+                               "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                                "$<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/include>"
 
                                ${Boost_INCLUDE_DIRS})
